fix: disable light/dark mode switching

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -20,12 +20,31 @@ html {
 }
 
 body {
+  @include hr($pink, 2px);
+
   margin: 0;
   transition: $themeTransition;
   font-kerning: normal;
   word-wrap: break-word;
   font-feature-settings: "kern", "liga", "clig", "calt";
   line-height: 1.75rem;
+
+  background-color: $darkBg;
+  color: $darkFg;
+
+  a {
+    color: $pink;
+  }
+
+  article a:not(.gatsby-resp-image-link) {
+    color: inherit;
+    border-bottom: 2px dashed $pink;
+  }
+
+  blockquote {
+    background: $pink;
+    color: #000000;
+  }
 }
 
 h1,
@@ -60,48 +79,6 @@ a {
 
 .site-title {
   margin: 15px 0;
-}
-
-/* Light theme */
-body.light {
-  @include hr($lightHl, 2px);
-  background-color: $lightBg;
-  color: $lightFg;
-
-  a {
-    color: $lightHl;
-  }
-
-  article a:not(.gatsby-resp-image-link) {
-    color: inherit;
-    border-bottom: 2px dashed $lightHl;
-  }
-
-  blockquote {
-    background: $blue;
-    color: #ffffff;
-  }
-}
-
-/* Dark theme */
-body.dark {
-  @include hr($pink, 2px);
-  background-color: $darkBg;
-  color: $darkFg;
-
-  a {
-    color: $pink;
-  }
-
-  article a:not(.gatsby-resp-image-link) {
-    color: inherit;
-    border-bottom: 2px dashed $pink;
-  }
-
-  blockquote {
-    background: $pink;
-    color: #000000;
-  }
 }
 
 #content {
